<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="hello_text">BMI CALCULATOR</string>

    <string name="maleButton_text">MALE</string>
    <string name="femaleButton_text">MALE</string>
    <string name="height_text">HEIGHT (CM)</string>
    <string name="cm_text">160cm</string>
    <string name="kg_weight_text">WEIGHT (KG)</string>
    <string name="lbs_weight_text">WEIGHT (LBS)</string>
    <string name="age_text">AGE</string>

    <string name="weight_count">60</string>
    <string name="age_count">18</string>

    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>

    <string name="calculate_button">CALCULATE</string>
    
    <string name="bmi_label">YOUR BODY MASS INDEX (BMI)</string>
    <string name="bmi_starter_value">0</string>
    <string name="status_label">YOUR WEIGHT STATUS</string>
    <string name="status_starter_value">Healthy!</string>
    <string name="height_label">HEIGHT: </string>
    <string name="height_starter_value">160</string>
    <string name="weight_label">WEIGHT: </string>
    <string name="weight_starter_value">60</string>
    <string name="age_label">AGE:</string>
    <string name="age_starter_value">18</string>
    <string name="another_calculation_button">CALCULATE AGAIN</string>

</resources>