<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F0522"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".ResultPage">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upper_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josenfin_font"
            android:text="@string/bmi_label"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="65dp"
            android:layout_centerHorizontal="true"
            android:layout_width="380dp"
            android:layout_height="65dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="#096671">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bmi_starter_value"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:textSize="50sp"
                android:textStyle="bold"
                android:id="@+id/displayBmi"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/teko_font"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_label"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/josenfin_font"/>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="190dp"
            android:layout_centerHorizontal="true"
            android:layout_width="380dp"
            android:layout_height="65dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="#096671">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_starter_value"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:layout_marginTop="5dp"
                android:textSize="50sp"
                android:textStyle="bold"
                android:id="@+id/displayStatus"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/teko_font"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upper_layout"
        android:id="@+id/lower_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_label"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/changa_font"/>

        <androidx.cardview.widget.CardView
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_width="200dp"
            android:layout_height="65dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="#096671">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/height_starter_value"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="45sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:id="@+id/display_height"
                android:fontFamily="@font/teko_font"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_label"
            android:layout_marginTop="150dp"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/changa_font"/>

        <androidx.cardview.widget.CardView
            android:layout_alignParentEnd="true"
            android:layout_marginTop="150dp"
            android:layout_width="200dp"
            android:layout_height="65dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="#096671">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/weight_starter_value"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="45sp"
                android:fontFamily="@font/teko_font"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:id="@+id/display_weight"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_label"
            android:layout_marginTop="250dp"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/changa_font"/>

        <androidx.cardview.widget.CardView
            android:layout_alignParentEnd="true"
            android:layout_marginTop="250dp"
            android:layout_width="200dp"
            android:layout_height="65dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="#096671" >

            <TextView
                android:id="@+id/display_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_starter_value"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:fontFamily="@font/teko_font"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/calculate_again"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/another_calculation_button"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:backgroundTint="#2D1447"
        android:textColor="@color/white"
        android:fontFamily="@font/concertone_font"/>
</RelativeLayout>